[FIX] website, *: review modal behaviors with right-panelization
*: web, web_editor

Since the right-panelization made with [1], the modals were not
compensating the body scrollbar when opened anymore and the backdrop
was misplaced. This commit fixes the problems generically, to support
modals with non-body scrolling.

[1]: https://github.com/odoo/odoo/pull/57975

X-original-commit: ebd0c90a146145079061e79c2d4c37fa182a2975

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -11,6 +11,7 @@ body.editor_enable.editor_has_snippets {
     }
 
     .modal:not(.o_technical_modal) {
+        top: 0 !important;
         // set z-index so customize options visible on dialog.
         z-index: $o-we-overlay-zindex - 1;
         // just for fake backdrop effect
